# stellar-pets

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
backend/: package.json  server.js  start-server.sh  test-server.js
contracts/stellar-pets-contract/: Cargo.toml
contracts/stellar-pets-contract/src/: lib.rs
smart-contract/savings-tracker/contracts/hello-world/src/: lib.rs
src/: App.tsx  env.d.ts
src/components/: DemoApp.tsx
src/components/features/: FeedingModal.tsx  HungerNotification.tsx  StatsDisplay.tsx
src/components/layout/: Navbar.tsx  PageLayout.tsx
src/components/pet/: PetCard.tsx  PetEmotions.tsx  PetSelector.tsx
src/components/ui/: Button.tsx  Card.tsx  HealthBar.tsx  Modal.tsx  Toast.tsx
src/constants/: config.ts
src/contexts/: PetContext.simple.tsx  PetContext.tsx  PetContext.types.ts  WalletContext.tsx  WalletContext.types.ts
src/hooks/: usePet.ts  useToast.tsx  useWallet.ts
src/pages/: Dashboard.tsx  Leaderboard.tsx  PetSelection.tsx  PetSelectionPage.tsx  Profile.tsx
src/types/: freighter.d.ts  index.ts
src/utils/: contractInvoke.ts
